// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`executeSwap accepts a nonce ('1') 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    [],
    {
      "nonce": "1",
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap accepts a nonce (1) 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    [],
    {
      "nonce": 1,
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap accepts a nonce (1n) 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    [],
    {
      "nonce": 1n,
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap can be invoked with localnet options 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    "0x456",
    "1",
    [],
    {
      "nonce": undefined,
    },
  ],
]
`;

exports[`executeSwap can be invoked with localnet options 2`] = `
[
  [
    "MY ADDRESS",
    "0x123",
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "FLIP", "destChain": "Ethereum"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    2,
    [],
    {
      "nonce": undefined,
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "USDC", "destChain": "Ethereum"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    3,
    [],
    {
      "nonce": undefined,
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destAsset": "DOT", "destChain": "Polkadot"}) 1`] = `
[
  [
    2,
    "0x841226ea070c9577979ca2e854130fbe3253853c13c05943e09908312950275d",
    4,
    [],
    {
      "nonce": undefined,
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destAsset": "BTC", "destChain": "Bitcoin"}) 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    [],
    {
      "nonce": undefined,
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destAsset": "BTC", "destChain": "Bitcoin"}) 2`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    [],
    {
      "nonce": undefined,
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "FLIP"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    1,
    "0x8e3D3250470314f2e8C1eC6062Df43B5d67B5b7d",
    "1",
    [],
    {
      "nonce": undefined,
    },
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "FLIP"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "USDC"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    1,
    "0x07865c6E87B9F70255377e024ace6630C1Eaa37F",
    "1",
    [],
    {
      "nonce": undefined,
    },
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destAsset": "ETH", "destChain": "Ethereum", "srcAsset": "USDC"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destAsset": "DOT", "destChain": "Polkadot", "srcAsset": "FLIP"}) 1`] = `
[
  [
    2,
    "0x841226ea070c9577979ca2e854130fbe3253853c13c05943e09908312950275d",
    4,
    "0x8e3D3250470314f2e8C1eC6062Df43B5d67B5b7d",
    "1",
    [],
    {
      "nonce": undefined,
    },
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destAsset": "DOT", "destChain": "Polkadot", "srcAsset": "FLIP"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destAsset": "DOT", "destChain": "Polkadot", "srcAsset": "USDC"}) 1`] = `
[
  [
    2,
    "0x841226ea070c9577979ca2e854130fbe3253853c13c05943e09908312950275d",
    4,
    "0x07865c6E87B9F70255377e024ace6630C1Eaa37F",
    "1",
    [],
    {
      "nonce": undefined,
    },
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destAsset": "DOT", "destChain": "Polkadot", "srcAsset": "USDC"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "FLIP"}) 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    "0x8e3D3250470314f2e8C1eC6062Df43B5d67B5b7d",
    "1",
    [],
    {
      "nonce": undefined,
    },
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "FLIP"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "FLIP"}) 3`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    "0x8e3D3250470314f2e8C1eC6062Df43B5d67B5b7d",
    "1",
    [],
    {
      "nonce": undefined,
    },
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "FLIP"}) 4`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "USDC"}) 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    "0x07865c6E87B9F70255377e024ace6630C1Eaa37F",
    "1",
    [],
    {
      "nonce": undefined,
    },
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "USDC"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "USDC"}) 3`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    "0x07865c6E87B9F70255377e024ace6630C1Eaa37F",
    "1",
    [],
    {
      "nonce": undefined,
    },
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destAsset": "BTC", "destChain": "Bitcoin", "srcAsset": "USDC"}) 4`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap with sufficient approval 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    "0x8e3D3250470314f2e8C1eC6062Df43B5d67B5b7d",
    "1",
    [],
    {
      "nonce": undefined,
    },
  ],
]
`;

exports[`executeSwap submits a token swap with sufficient approval 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;
